fix: streamline Dockerfile by removing curl installation and using ADD for SqlPackage

--- a/scripts/backups/db-backup-container/Dockerfile
+++ b/scripts/backups/db-backup-container/Dockerfile
@@ -7,8 +7,6 @@ RUN groupadd -r appgroup && useradd -r -g appgroup appuser
 # Update package lists and install required tools.
 # 'lsb-release' is added to fix the 'lsb_release: not found' error.
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    curl \
-    unzip \
     gnupg \
     lsb-release \
     && rm -rf /var/lib/apt/lists/*
@@ -17,10 +15,10 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 RUN pwsh -Command "Install-Module -Name Az.Accounts -RequiredVersion 2.12.0 -Force -Scope AllUsers"
 
 # Install SqlPackage by downloading the binary.
-RUN curl --proto "=https" --tlsv1.2 -sSfL -o sqlpackage.zip https://aka.ms/sqlpackage-linux \
-    && mkdir /opt/sqlpackage \
-    && unzip sqlpackage.zip -d /opt/sqlpackage \
-    && rm sqlpackage.zip \
+ADD https://aka.ms/sqlpackage-linux /tmp/sqlpackage.zip
+RUN mkdir /opt/sqlpackage \
+    && unzip /tmp/sqlpackage.zip -d /opt/sqlpackage \
+    && rm /tmp/sqlpackage.zip \
     && chmod +x /opt/sqlpackage/sqlpackage
 
 # Install AzCopy from the Microsoft repository.
