--- a/.azuredevops/pipelines/task_azure_sql_backup_prod.yaml
+++ b/.azuredevops/pipelines/task_azure_sql_backup_prod.yaml
@@ -53,3 +53,100 @@ stages:
             jobName: ca-db-backup-uksouth
             maxPollingAttempts: 240
             pollingIntervalSeconds: 15
+
+    - job: set_db_backup_stage_status
+      displayName: Set Database Backup Status
+      pool:
+        name: $(hostPoolName)
+      dependsOn:
+        - db_changes
+      condition: always()
+      variables:
+        db_backup_stage_result: $[ dependencies.db_backup_stage.result ]
+      steps:
+          - bash: |
+              status="failed"
+              # Access the variables that were set at the job level
+              if [[ "$(db_backup_stage_result)" == "Succeeded" || "$(db_backup_stage_result)" == "Skipped" ]]; then
+                status="succeeded"
+              fi
+              echo "The final status of the DB Backup stage is: $status"
+              echo "##vso[task.setvariable variable=stage_status;isOutput=true]$status"
+            name: set_db_backup_status
+            displayName: Set Database Backup Status
+
+- stage: notify_stage
+  displayName: Send Slack Notification
+  dependsOn:
+    - db_backup_stage
+  condition: always()
+  variables:
+    set_db_backup_stage_status: $[ stageDependencies.db_backup_stage.set_db_backup_stage_status.outputs['set_db_backup_status.stage_status'] ]
+    slackWebHook: $(SLACK_WEBHOOK_URL_WORKFLOWS)
+  jobs:
+    - job: set_status_job
+      displayName: Set Status Output
+      steps:
+        - bash: |
+            declare -A stage_statuses=(
+              ["DB Backup"]="$(set_db_backup_stage_status)"
+            )
+
+            failed_stages=""
+            skipped_stages=""
+            for stage in "${!stage_statuses[@]}"; do
+              status="${stage_statuses[$stage]}"
+              echo "$stage status: $status"
+              if [ "$status" == "" ]; then
+                if [ -n "$skipped_stages" ]; then
+                  skipped_stages="$skipped_stages, $stage"
+                else
+                  skipped_stages="$stage"
+                fi
+              elif [ "$status" != "succeeded" ]; then
+                if [ -n "$failed_stages" ]; then
+                  failed_stages="$failed_stages, $stage"
+                else
+                  failed_stages="$stage"
+                fi
+              fi
+            done
+
+            if [ -z "$failed_stages" ]; then
+              echo "##vso[task.setvariable variable=status;isOutput=true]succeeded"
+            else
+              echo "##vso[task.setvariable variable=status;isOutput=true]failed"
+              echo "##vso[task.setvariable variable=failedStages;isOutput=true]$failed_stages"
+            fi
+            if [ -n "$skipped_stages" ]; then
+              echo "##vso[task.setvariable variable=skippedStages;isOutput=true]$skipped_stages"
+            else
+              echo "##vso[task.setvariable variable=skippedStages;isOutput=true]None"
+            fi
+          name: set_status
+          displayName: Set Slack Message Status
+
+    - job: send_message_job
+      displayName: Send Slack Message
+      dependsOn: set_status_job
+      variables:
+        final_status: $[ dependencies.set_status_job.outputs['set_status.status'] ]
+        failed_stages: $[ dependencies.set_status_job.outputs['set_status.failedStages'] ]
+        slackFailureMessage: |
+          *❌ $(ENVIRONMENT_SHORT) Database Backup _Failed_*
+
+          *Failed Action:* $(failed_stages)
+          *<$(System.CollectionUri)$(System.TeamProject)/_build/results?buildId=$(Build.BuildId)|View Pipeline Run for details>*
+      steps:
+        - checkout: dtos-devops-templates
+          sparseCheckoutDirectories: scripts
+          path: templates
+        - task: PythonScript@0
+          displayName: 'Send Slack Failure Notification'
+          condition: eq(variables.final_status, 'failed')
+          inputs:
+            scriptSource: 'filePath'
+            scriptPath: '$(Pipeline.Workspace)/templates/scripts/integrations/slack/SlackIntegrator.py'
+            arguments: >
+              --webhook "$(slackWebHook)"
+              --markdown "$(slackFailureMessage)"
