fix: add transformation to add space to postcode

--- a/application/CohortManager/compose.core.yaml
+++ b/application/CohortManager/compose.core.yaml
@@ -154,6 +154,7 @@ services:
     container_name: delete-participant
     image: cohort-manager-delete-participant
     networks: [cohman-network]
+    profiles: [non-essential]
     ports:
     - "7087:7087"
     build:
