--- a/tests/UnitTests/ConsolidatedTests.csproj
+++ b/tests/UnitTests/ConsolidatedTests.csproj
@@ -44,6 +44,12 @@
     <PackageReference Include="Hl7.Fhir.Base" Version="5.11.4" />
   </ItemGroup>
 
+  <!-- Additional Projects to ensure Sonar analysis coverage -->
+  <ItemGroup>
+    <ProjectReference Include="..\..\application\CohortManager\src\Functions\**\*.csproj"
+                      Exclude="..\..\application\CohortManager\src\Functions\Shared\dotnet-mesh-client\tests\**\*.csproj;..\..\application\CohortManager\src\Functions\**\*Tests.csproj" />
+  </ItemGroup>
+
   <!-- Global Using Statements -->
   <ItemGroup>
     <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
