--- a/tests/UnitTests/CohortDistributionTests/CohortDistributionDataTests/CohortDistributionDataTests.csproj
+++ b/tests/UnitTests/CohortDistributionTests/CohortDistributionDataTests/CohortDistributionDataTests.csproj
@@ -23,6 +23,8 @@
   </ItemGroup>
 
   <ItemGroup>
+
+    <ProjectReference Include="..\..\..\..\application\CohortManager\src\Functions\CohortDistributionServices\RetrieveCohortDistribution\RetrieveCohortDistribution.csproj" />
     <ProjectReference Include="..\..\..\TestUtils\TestUtils.csproj" />
   </ItemGroup>
 
