--- a/tests/UnitTests/ConsolidatedTests.csproj
+++ b/tests/UnitTests/ConsolidatedTests.csproj
@@ -15,6 +15,11 @@
 
   <!-- NuGet Package References -->
   <ItemGroup>
+    <!-- Enable msbuild-driven coverage output (OpenCover) for Sonar -->
+    <PackageReference Include="coverlet.msbuild" Version="6.0.0">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <!-- Testing Packages -->
     <PackageReference Include="coverlet.collector" Version="6.0.0">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
