--- a/application/CohortManager/src/Web/package.json
+++ b/application/CohortManager/src/Web/package.json
@@ -17,8 +17,8 @@
   "dependencies": {
     "axe-playwright": "^2.1.0",
     "jwt-decode": "^4.0.0",
-    "next": "15.5.2",
-    "next-auth": "5.0.0-beta.25",
+    "next": "^15.5.7",
+    "next-auth": "^5.0.0-beta.30",
     "nhsuk-frontend": "^10.0.0-internal.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
