Adding New Rules

--- a/application/CohortManager/compose.wiremock.yaml
+++ b/application/CohortManager/compose.wiremock.yaml
@@ -7,6 +7,7 @@ services:
     build:
       context: ./src/Functions/
       dockerfile: Shared/Wiremock/Dockerfile
+    user: "0"
     ports:
       - "8080:8080"
     volumes:
