--- a/application/CohortManager/src/Functions/ScreeningValidationService/StaticValidation/Breast_Screening_staticRules.json
+++ b/application/CohortManager/src/Functions/ScreeningValidationService/StaticValidation/Breast_Screening_staticRules.json
@@ -93,7 +93,7 @@
       },
             {
         "RuleName": "3.PrimaryCareProviderAndReasonForRemoval.NBO.NonFatal",
-        "Expression": "(string.IsNullOrEmpty(participant.PrimaryCareProvider) AND !string.IsNullOrEmpty(participant.ReasonForRemoval)) OR (!string.IsNullOrEmpty(participant.PrimaryCareProvider) AND string.IsNullOrEmpty(participant.ReasonForRemoval))",
+        "Expression": "manualAdd OR ((string.IsNullOrEmpty(participant.PrimaryCareProvider) AND !string.IsNullOrEmpty(participant.ReasonForRemoval)) OR (!string.IsNullOrEmpty(participant.PrimaryCareProvider) AND string.IsNullOrEmpty(participant.ReasonForRemoval)))",
         "Actions": {
           "OnFailure": {
             "Name": "OutputExpression",
@@ -169,6 +169,35 @@
             "Name": "OutputExpression",
             "Context": {
               "Expression": "\"Invalid death status\""
+            }
+          }
+        }
+      }
+    ]
+  },
+  {
+    "WorkflowName": "Manual_Add",
+    "Rules": [
+      {
+        "RuleName": "97.NoGPorPCP.BSSelect.NonFatal",
+        "Expression": "!string.IsNullOrEmpty(participant.PrimaryCareProvider)",
+        "Actions": {
+          "OnFailure": {
+            "Name": "OutputExpression",
+            "Context": {
+              "Expression": "\"Missing GP details (and no accepted reason for removal)\""
+            }
+          }
+        }
+      },
+      {
+        "RuleName": "98.ManualAddWithBlockingRFR.BSSelect.NonFatal",
+        "Expression": "reasonForRemovalLkp.CanRemovalReasonBeOverridden(participant.ReasonForRemoval)",
+        "Actions": {
+          "OnFailure": {
+            "Name": "OutputExpression",
+            "Context": {
+              "Expression": "\"Participant cannot be sent to BS Select due to reason for removal (RfR)\""
             }
           }
         }
