--- a/application/CohortManager/src/Functions/ScreeningValidationService/LookupValidation/Breast_Screening_lookupRules.json
+++ b/application/CohortManager/src/Functions/ScreeningValidationService/LookupValidation/Breast_Screening_lookupRules.json
@@ -110,5 +110,28 @@
         }
       }
     ]
+  },
+  {
+    "WorkflowName":"ManualAdd",
+    "GlobalParams": [
+      {
+        "Name": "ValidPrimaryCareProvider",
+        "Expression": "string.IsNullOrEmpty(newParticipant.PrimaryCareProvider) || dbLookup.CheckIfPrimaryCareProviderExists(newParticipant.PrimaryCareProvider)"
+      }
+    ],
+    "Rules":[
+      {
+        "RuleName": "3601.ValidatePrimaryCareProvider.BSSelect.NonFatal",
+        "Expression": "ValidPrimaryCareProvider",
+        "Actions": {
+          "OnFailure": {
+            "Name": "OutputExpression",
+            "Context": {
+              "Expression": "\"Invalid primary care provider GP practice code\""
+            }
+          }
+        }
+      }
+    ]
   }
 ]
