Update Rule 40 Category

--- a/application/CohortManager/src/Functions/ScreeningValidationService/LookupValidation/Breast_Screening_lookupRules.json
+++ b/application/CohortManager/src/Functions/ScreeningValidationService/LookupValidation/Breast_Screening_lookupRules.json
@@ -121,7 +121,7 @@
     ],
     "Rules":[
       {
-        "RuleName": "3601.ValidatePrimaryCareProvider.BSSelect.NonFatal",
+        "RuleName": "3601.ValidatePrimaryCareProvider.NBO.NonFatal",
         "Expression": "ValidPrimaryCareProvider",
         "Actions": {
           "OnFailure": {
