--- a/application/CohortManager/src/Functions/ScreeningValidationService/LookupValidation/Breast_Screening_lookupRules.json
+++ b/application/CohortManager/src/Functions/ScreeningValidationService/LookupValidation/Breast_Screening_lookupRules.json
@@ -9,7 +9,7 @@
     ],
     "Rules": [
       {
-        "RuleName": "45.GPPracticeCodeDoesNotExist.BSSelect.NonFatal",
+        "RuleName": "45.GPPracticeCodeDoesNotExist.NBO.NonFatal",
         "LocalParams": [
           {
             "Name": "WelshPostingCategory",
