feat: rule 40 enhancement (#1789)
* Adding New Rules

* fix rule to nullify rfr effective from date

* transform unit tests

* update rules

* Complete Unit Tests

* Update Rule 40 Category

* Update category and comment for rfr static rules

* fix unit tests

* Update Rules to include RDR check

* Correcting Logic

* Address Comments

* fix merge issue

* more merge issues

* remove duplicate code

--- a/application/CohortManager/src/Functions/ScreeningValidationService/LookupValidation/Breast_Screening_lookupRules.json
+++ b/application/CohortManager/src/Functions/ScreeningValidationService/LookupValidation/Breast_Screening_lookupRules.json
@@ -102,5 +102,28 @@
         }
       }
     ]
+  },
+  {
+    "WorkflowName":"ManualAdd",
+    "GlobalParams": [
+      {
+        "Name": "ValidPrimaryCareProvider",
+        "Expression": "string.IsNullOrEmpty(newParticipant.PrimaryCareProvider) || dbLookup.CheckIfPrimaryCareProviderExists(newParticipant.PrimaryCareProvider)"
+      }
+    ],
+    "Rules":[
+      {
+        "RuleName": "3601.ValidatePrimaryCareProvider.NBO.NonFatal",
+        "Expression": "ValidPrimaryCareProvider",
+        "Actions": {
+          "OnFailure": {
+            "Name": "OutputExpression",
+            "Context": {
+              "Expression": "\"Invalid primary care provider GP practice code\""
+            }
+          }
+        }
+      }
+    ]
   }
 ]
